--- a/porjekt_szkola_1/main_page/main.html
+++ b/porjekt_szkola_1/main_page/main.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../menu.css">
     </head>
 
     <body>
@@ -14,7 +15,7 @@
             <h2> Melina</h2>
 
             <ul class="menu">
-                <li>About</li>
+                <li> <a href="../menu/about/about.html">About</a></li>
                 <li>Menu</li>
                 <li>Book a table</li>
                 <li>Contact</li>
