--- a/porjekt_szkola_1/menu/about/about.html
+++ b/porjekt_szkola_1/menu/about/about.html
@@ -3,25 +3,50 @@
     <link rel="stylesheet" href="../../menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" >
+    <link rel="stylesheet" href="about.css" >
 
 </head>
 
 <body>
     <div class="div1">
-        <h2> Melina</h2>
+        <h2> <a href="../../main_page/main.html"> Melina </a></h2>
 
         <ul class="menu">
-            <li> <a href="../menu/about/about.html">About</a></li>
+            <li> <a href="../about/about.html">About</a></li>
             <li>Menu</li>
             <li>Book a table</li>
-            <li>Contact</li>
+            <li> <a href="../contact/contact.html">Contact </a></li>
             <li><img class="logicn" src="../../main_page/img/icon.png"></li>
             <li>log in</li>
         </ul>
 
     </div>
 
+    <div class="div_1">
+        <h2>Who we are?</h2>
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet consectetur urna. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
+            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis.</p>
 
+    </div>
 
+    <div class="div_2">
+        <h2>Why should you choose our restaurant?</h2>
+        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet consectetur urna. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
+            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
+            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis.</p>
+    </div>
+
+        <div class="div_3">
+            <img src="michelin.jpg">
+        </div>
+
+        <div class="div_4">
+            <h1>where we are</h1>
+            <p>adress:</p>
+            <p> W6F2+7JP, Ulcinj 85360, Monte Negro</p>
+            
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=dulcinea%20czarnog%C3%B3ra&t=&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123 movies</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map insert</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:300px;}</style></div></div>
+
+        </div>
 </body>
