--- a/porjekt_szkola_1/main_page/main.html
+++ b/porjekt_szkola_1/main_page/main.html
@@ -12,13 +12,13 @@
     <body>
 
         <div class="div1">
-            <h2> Melina</h2>
+        <h2> <a href="main.html"> Melina </a></h2>
 
             <ul class="menu">
                 <li> <a href="../menu/about/about.html">About</a></li>
                 <li>Menu</li>
                 <li>Book a table</li>
-                <li>Contact</li>
+                <li> <a href="../menu/contact/contact.html">Contact </a></li>
                 <li><img class="logicn" src="img/icon.png"></li>
                 <li>log in</li>
             </ul>
