--- a/porjekt_szkola_1/main_page/main.html
+++ b/porjekt_szkola_1/main_page/main.html
@@ -16,7 +16,7 @@
 
             <ul class="menu">
                 <li> <a href="../menu/about/about.html">About</a></li>
-                <li>Menu</li>
+                <li><a href="../menu/menuu/menuu.html">Menu</a></li>
                 <li>Book a table</li>
                 <li> <a href="../menu/contact/contact.html">Contact </a></li>
                 <li><img class="logicn" src="img/icon.png"></li>
