--- a/porjekt_szkola_1/menu/about/about.html
+++ b/porjekt_szkola_1/menu/about/about.html
@@ -14,7 +14,7 @@
 
         <ul class="menu">
             <li> <a href="../about/about.html">About</a></li>
-            <li>Menu</li>
+            <li><a href="../menuu/menuu.html">Menu</a></li>
             <li>Book a table</li>
             <li> <a href="../contact/contact.html">Contact </a></li>
             <li><img class="logicn" src="../../main_page/img/icon.png"></li>
