--- a/porjekt_szkola_1/menu/about/about.html
+++ b/porjekt_szkola_1/menu/about/about.html
@@ -10,31 +10,32 @@
 
 <body>
     <div class="div1">
-        <h2> <a href="../../main_page/main.html"> Melina </a></h2>
+        <h2> <a href="../../main_page/main.html"> Dulcinea </a></h2>
 
         <ul class="menu">
             <li> <a href="../about/about.html">About</a></li>
             <li><a href="../menuu/menuu.html">Menu</a></li>
-            <li>Book a table</li>
+            <li><a href="../reserve/reserve.html">reserve/order</a></li>
             <li> <a href="../contact/contact.html">Contact </a></li>
-            <li><img class="logicn" src="../../main_page/img/icon.png"></li>
-            <li>log in</li>
         </ul>
 
     </div>
 
     <div class="div_1">
         <h2>Who we are?</h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet consectetur urna. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
-            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis.</p>
+        <p> We are one of the best restaurant in Monte Negro. Dishes are being made here with passion and love for cooking.
+            Our staff are best of bests chefs in the world with nicest and the most proffesional waters you will ever see.
+            All of it is proved by all 3 Micheline's stars and frequent visits by famous critics.
+        </p>
 
     </div>
 
     <div class="div_2">
         <h2>Why should you choose our restaurant?</h2>
-        <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sit amet consectetur urna. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
-            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis. Ut in justo posuerex, placerat dui sit amet, rutrum purus. 
-            Fusce faucibus, ante sed ultricies rutrum, lectus velit eleifend enim, sed lacinia turpis.</p>
+        <p>Dishes here are on highest level you could ever imagine, waiters are the nicest proffesion
+            you will ever meet. Moment of tasting our dishes will be remembered by you better than your wedding
+            and you will get "addicted" to it. Thats how people rate our restaurant. Come and taste it yourself.
+        </p>
     </div>
 
         <div class="div_3">
@@ -47,6 +48,27 @@
             <p> W6F2+7JP, Ulcinj 85360, Monte Negro</p>
             
             <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="250" id="gmap_canvas" src="https://maps.google.com/maps?q=dulcinea%20czarnog%C3%B3ra&t=&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123 movies</a><br><style>.mapouter{position:relative;text-align:right;height:250px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map insert</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:250px;width:300px;}</style></div></div>
+
+
+        </div>
+        <div class="cooks">
+            <h2>Staff:</h2>
+            <div>
+                <p>Axl Rose - main chef</p>
+                <p>Izzy Stradlin - chef</p>
+        </div>
+        <div>
+            <p>Duff McKagan - second chef</p>
+            <p>Steven Adler - third chef</p>
+            <p>Melissa Reese - waitress</p>
+            <p>buckethead - waiter</p>
+            
+        </div>
+
+        <div class="nic"> tu nic nie ma tu nic nie ma tu nic nie ma tu nic nie ma tu nic nie ma tu nic nie ma tu nic nie ma
+            tu nic nie ma tu nic nie ma
+            tu nic nie ma tu nic nie ma
+            tu nic nie ma tu nic nie ma
 
         </div>
 </body>
