--- a/porjekt_szkola_1/menu/menuu/menuu.html
+++ b/porjekt_szkola_1/menu/menuu/menuu.html
@@ -10,15 +10,13 @@
 
 <body>
     <div class="div1">
-        <h2> <a href="../../main_page/main.html"> Melina </a></h2>
+        <h2> <a href="../../main_page/main.html"> Dulcinea </a></h2>
 
         <ul class="menu">
             <li> <a href="../about/about.html">About</a></li>
             <li><a href="../menuu/menuu.html">Menu</a></li>
-            <li>Book a table</li>
+            <li><a href="../reserve/reserve.html">reserve/order</a></li>
             <li> <a href="../contact/contact.html">Contact </a></li>
-            <li><img class="logicn" src="../../main_page/img/icon.png"></li>
-            <li>log in</li>
         </ul>
     </div>
 
@@ -60,4 +58,10 @@
         <p>sauerkraut:   1$</p>
 
     </div>
-    </body>
+
+    <div class="dishes">
+        <h1><a href = "dishes.html"> See our dishes </a></h1>
+
+    </div>
+
+</body>
