--- a/porjekt_szkola_1/main_page/main.html
+++ b/porjekt_szkola_1/main_page/main.html
@@ -12,15 +12,13 @@
     <body>
 
         <div class="div1">
-        <h2> <a href="main.html"> Melina </a></h2>
+        <h2> <a href="main.html"> Dulcinea </a></h2>
 
             <ul class="menu">
                 <li> <a href="../menu/about/about.html">About</a></li>
                 <li><a href="../menu/menuu/menuu.html">Menu</a></li>
-                <li>Book a table</li>
+                <li><a href="../menu/reserve/reserve.html">reserve/order</a></li>
                 <li> <a href="../menu/contact/contact.html">Contact </a></li>
-                <li><img class="logicn" src="img/icon.png"></li>
-                <li>log in</li>
             </ul>
 
         </div>
@@ -43,6 +41,9 @@
             <p>mon - fri: 10:00 - 22:00</p>
             <p>sat - sun: 13:00 - 23:00</p>
         </div>
+
+
+
 
     </body>
 
